@@ -7,6 +7,7 @@ WriteMakefile(
 	      'NAME'	=> 'rpm',
 	      'OBJECT'	=> 'rpm.o constant.o',
 	      'VERSION_FROM' => 'rpm.pm',		# finds $VERSION
+	      'MAKEFILE'=> 'PMakefile',
 	      'LIBS'	=> [' -L/usr/local/lib  -ldb1 -lz -lbz2'],			# e.g., '-lm' 
 	      'CCFLAGS' => '-g -O2 -D_GNU_SOURCE -Wall -Wpointer-arith -Wstrict-prototypes -Wmissing-prototypes -Wno-char-subscripts',
 	      'OPTIMIZE'=> '-g',
