@@ -55,6 +55,7 @@
 	- add scripts for autogenerating CPAN dependencies.
 	- add sl.po from Primoz Peterlin <peterlin@biofiz.mf.uni-lj.si>.
 	- updated sv.po from <goeran@uddeborg.pp.se>.
+	- macro expansion (and absolute path) in %files -f arg (#9508,#9091).
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
